# SearchRankMaster

./: .gitignore  Pasted-Project-Title-Machine-Learning-Powered-Search-Ranking-System-Objective-To-develop-a-search-rankin-1746121252424.txt  README.md  app.py  download_data.py  pyproject.toml  requirements.txt  setup.py  setup_git_lfs.sh
config/: __init__.py  settings.py
data/: README.md
data/mslr_web10k/: test.csv  train.csv  validation.csv
pages/: 1_data_exploration.py  2_feature_analysis.py  3_model_training.py  4_model_evaluation.py  __init__.py
searchrankmaster/: __init__.py  data.py  evaluation.py  models.py
utils/: data_loader.py  data_utils.py  evaluation.py  feature_analysis.py  model_training.py
workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
