[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.14.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "streamlit>=1.22.0",
    "xgboost>=3.0.0",
    "tensorflow>=2.15.0",
    "tensorflow-datasets>=4.0.0,<5.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"